добавлен обработчик инпута и кнопки для входа в приложение через почту без бд

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,8 @@
 .custom-input-main-input .ant-input::placeholder {
   color: var(--midleprimary) !important;
 }
+
+.ErrorAlertRED{
+  position: absolute;
+  top: 5%;
+}
