--- a/src/index.css
+++ b/src/index.css
@@ -523,13 +523,18 @@ border-radius: 16px;
   left: 0;
   background-color: #00000084;
 }
-
+.projectadd{
+  z-index: 300;
+}
+.addtaskalerttttt{
+    z-index: 700;
+}
 .addtask_container{
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+
   width: 100%;
   height: 100%;
   top: 0;
@@ -886,6 +891,14 @@ p {
   border-radius: 16px;
   height: 52vh;
 
+}.backgroundprojecvt_white{
+  display: flex;
+  flex-direction: column;
+    padding: 16px;
+  background-color: white;
+  width: 100%;margin-top: 6px;
+  border-radius: 16px;
+  height: 83vh;
 }
 .dangerwhith{
   width: 100px;
@@ -975,6 +988,11 @@ input:focus-visible {
     outline: none;
 }
 
+/* Убедитесь, что z-index Popover достаточно высокий */
+[data-radix-popper-content-wrapper] {
+  z-index: 9999 !important;
+}
+
 .inputtitileoftask{
   font-size: 20px;
   width: 100%;
@@ -982,22 +1000,21 @@ input:focus-visible {
 .linetitle{
   margin-top: 5px;
   width: 100%;
-  height: 2px;
+  height: 1.5px;
   border-radius: 2px;
-background-color: #c4c4c48a;
+  background-color: #c4c4c48a;
   transition: all 0.3s ease;
 }
 
 .inputtitileoftask:active ~ .linetitle,
 .inputtitileoftask:focus ~ .linetitle {
-    background-color: #0051FF;
+    background-color: #6291f7;
 }
 .inputs_{
   padding-top: 10px;
 }
 
 .button_downloadddddd{
-  margin-top: 10px;
   width: 100%;
 }
 
@@ -1005,6 +1022,7 @@ background-color: #c4c4c48a;
 .brothers_dropdown{
   gap: 10px;
   padding-top: 10px;
+  padding-bottom: 10px;
   width: 100%;
 }
 .dropdownbuttonchoose{
@@ -1018,6 +1036,7 @@ background-color: #c4c4c48a;
 }
 
 .timepcik{
+  width: 100%;
   display: flex;
   gap: 10px;
   justify-content: space-between;
@@ -1030,3 +1049,265 @@ background-color: #c4c4c48a;
 .qergeqrg{
   margin-top: 16px;
 }
+
+.border{
+  border: 0px black solid;
+}
+
+.contentsett{
+  display: flex;
+  justify-content: space-between;
+}
+.left_content{
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+}
+.right_content{
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    height: 100%;
+    width: 100%;
+}
+.titleinpit{
+  padding-top: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.contactsform{
+  padding-top: 8px;
+  display: flex;
+  gap: 16px;
+}
+
+.custombuttonselecttime{
+  border: 1px #d7d7d7 solid ;
+  border-radius: 0.4rem;
+  height: 33px;
+}
+.custombuttonselecttime:hover{
+  color: var(--primary);
+    border: 1px var(--primary) solid ;
+    background-color: white;
+}
+.container_selectdeadline{
+  display: flex;
+  gap: 12px;
+}
+.selectjfuwefi{
+  width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    justify-content: space-between;
+}
+
+.customselecttimedd{
+  width: 100%;
+}
+.linesecltf{
+  width: 12px;
+  height: 1px;
+  background-color: black;
+}
+
+.disabled{
+  padding-top: 8px;
+  font-size: 0.9rem;
+  opacity: 0.5;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* Ограничение в 2 строки */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.filesdownload{
+  padding-bottom: 8px;
+}
+.sectime{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.materialforproject{
+  padding-top: 13px;
+}
+.container_ofblockdd{
+  display: flex;
+  height: 100%;
+}
+.use_form{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.ijewf{
+  font-size: 13px;
+  opacity: 0.5;
+}
+
+.bacgroundaddprojectrit{
+  background-color: #F0F0F0;
+  border-radius: 9px;
+  padding: 13px;
+  height: 53.9vh;
+  width: 100%;
+}
+
+.settingshumantask{
+  display: flex;
+  gap: 16px;
+}
+.addsteps{
+  scrollbar-color: hidden;
+  width: 40vw;
+  overflow: auto;
+  padding: 13px;
+  border-radius: 9px;
+  border: 1px #D9D9D9 solid;
+}
+/* .customsteps{
+min-width: 1200px;
+} */
+.addsteps::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
+.enterstep{
+  display: flex;
+  gap: 16px;
+  padding-top: 16px;
+}
+
+.containeroflist{
+  margin-top: 8px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  border-radius: 8px;
+  height: 47vh;
+  width: 100%;
+}
+/* From Uiverse.io by PriyanshuGupta28 */ 
+.input[type="checkbox"] {
+  display: none;
+}
+
+
+  /* Style for the custom checkbox */
+.custom-checkbox {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  border: 2px solid #DDDBDB;
+  border-radius: 50%;
+  position: relative;
+  cursor: pointer;
+}
+
+  /* Style for the custom checkmark */
+.custom-checkbox::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 12px;
+  height: 12px;
+  background-color: #0051FF;
+  border-radius: 50%;
+  opacity: 0;
+}
+
+  /* Show the checkmark when checkbox is checked */
+.input[type="checkbox"]:checked + .custom-checkbox::after {
+  opacity: 1;
+}
+.infstuff{
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.bacground_ofstf{
+  background-color: white;
+  border-radius: 10px;
+  padding: 8px 12px;
+}
+
+.titlechjtf{
+  font-size: 16px;
+}
+.titlechjtfffff{
+  color: #0051FF;
+    font-size: 13px;
+}
+
+.containeroflist{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.containeroflist::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+.addtaskprojectittle{
+  font-size: 16px;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* Ограничение в 2 строки */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.bacgroundaddtaskpriject{
+  cursor: pointer;
+  background-color: white;
+  padding: 13px;
+  border-radius: 10px;
+
+}
+.descriptionaddtaskalertproject{
+    font-size: 13px;
+    opacity: 0.6;
+    display: -webkit-box;
+  -webkit-line-clamp: 4; /* Ограничение в 2 строки */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.timeaddtaskprojectalert{
+  font-size: 13px;
+  color: #0051FF;
+}
+.maininfaddtaskproject{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+
+
+.buttoncontainercc{
+    height: 40vh;
+}
+
+.addprojectalert{
+  margin-top: 10px;
+}
+
+.textareakddkd{
+  padding-bottom: 10px;
+}
+.weiojfpiw{
+  padding-bottom: 10px;
+}
+
+.qwefqwefqwefqwefq{
+  width: 100%;
+}
+
