--- a/src/index.css
+++ b/src/index.css
@@ -754,7 +754,11 @@ p {
 .taskff{
   color: #1D4ED8;
 }
+.ijqeiwfoiquweifhioquwef{
+    width: 13vw;
+}
 .namestuffff{
+  width: 8vw;
   color: #000000;
     transition: all 0.3s ease;
 }
